# Chatbot-with-Memory

./: README.md  live_chat.py  main.py  pyproject.toml  requirements.txt
chatbot/: __init__.py  model.py
src/: __init__.py  input_handler.py  model.py  output_handler.py  workflow_setup.py
tests/: input.json  output.json  test_var.py
